syntax = "proto3";

package rankcollector;

option go_package ="github.com/awnzl/top_currency_checker/lib/proto/rankcollector";

message RankRequest {
    int32 limit = 1;
}

message RankResponse {
    // Represents the list of currencies ordered by rank from the highest to the lowest
    repeated string List = 1;
}

service RankService {
    // returns sorted list of currencies based on the highest price
    rpc GetRanks(RankRequest) returns (RankResponse);
}
